feat: .env examples

--- a/docker-compose-init.yml
+++ b/docker-compose-init.yml
@@ -52,4 +52,4 @@ services:
       context: ./kitchen-admin
     volumes:
       - ./kitchen-admin:/app
-    command: ls -l
+    command: npm install
